--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ targetCompatibility = 1.8
 
 buildscript {
 	repositories {
-	    mavenCentral()
+	    jcenter()
 	}
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
@@ -22,7 +22,7 @@ buildscript {
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
