--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'eclipse'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
 
 group = GROUP
 version = VERSION
@@ -18,6 +20,7 @@ buildscript {
 	}
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
@@ -41,4 +44,32 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version:'2.+'
     
     testCompile group: 'com.google.guava', name: 'guava-testlib', version: '23.0'
+}
+
+publishing {
+    publications {
+        master(MavenPublication) {
+            artifact jar
+            groupId GROUP
+            artifactId ARTIFACT_ID
+            version VERSION
+        }
+    }
+}
+
+bintray {
+    // ~/.gradle/gradle.properties
+    user = BINTRAY_USER
+    key = BINTRAY_KEY
+    
+    publications = ['master']
+    
+    dryRun = false
+    publish = true
+    override = true
+    
+	pkg {
+        repo = 'GitHub'
+        name = 'Java-Cross-Platform-Magic'
+    }
 }
